# gen-ai-playground

./: .gitignore  README.md  TODO.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
assets/: README.md
configs/: model_config.yaml  prompt_templates.yaml
notebooks/: 01_image_gen.ipynb  02_lora_ip_adapter_dreambooth.ipynb  03_consistency_experiments.ipynb
src/: __init__.py
src/image/: __init__.py  controlnet.py  dreambooth.py  ip_adapter.py  lora.py  pipeline.py  reference_only.py  textual_inversion.py
src/training/: __init__.py  train_dreambooth.py  train_lora.py  train_textual_inversion.py
src/utils/: __init__.py  clip_blip_scoring.py  consistency_scoring.py  latent_utils.py  prompt_helpers.py  seed_utils.py
tests/: test_consistency_scoring.py  test_dreambooth_pipeline.py  test_image_pipeline.py  test_latent_utils.py  test_lora_pipeline.py  test_prompt_helpers.py  test_seed_utils.py
