[project]
name = "gen-ai-playground"
version = "0.1.0"
description = "Experimental playground for consistent generative AI image generation (illustrated styles)"
readme = "README.md"
requires-python = ">=3.10"

# ---------------------------------------------------------------------------
# Runtime dependencies
# ---------------------------------------------------------------------------
# Heavy ML deps (torch, diffusers, etc.) are pinned in requirements.txt and
# installed via `uv pip install -r requirements.txt` to keep this file light.
# Pure-project utilities have no additional runtime deps beyond those listed.
dependencies = []

# ---------------------------------------------------------------------------
# Optional dependency groups
# ---------------------------------------------------------------------------

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "black>=24.0",
    "Pillow>=10.0.0",
    "numpy>=1.24.0",
]
notebooks = [
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "ipywidgets>=8.0.0",
]

# ---------------------------------------------------------------------------
# Build backend (required by PEP 517; uv uses this)
# ---------------------------------------------------------------------------

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"

# ---------------------------------------------------------------------------
# Ruff (linter / formatter)
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # line length handled by formatter

# ---------------------------------------------------------------------------
# Black (formatter)
# ---------------------------------------------------------------------------

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
