[project]
name = "gen-ai-playground"
version = "0.1.0"
description = "Experimental playground for consistent generative AI image generation (illustrated styles)"
readme = "README.md"
requires-python = ">=3.10"

# ---------------------------------------------------------------------------
# Runtime dependencies
# ---------------------------------------------------------------------------
# Runtime dependencies are split across optional extras (see below) to keep CI
# fast: `uv sync --extra dev` installs only lightweight test/lint tools.
# Use `uv sync --extra dev --extra ml` for the full development setup.
dependencies = []

# ---------------------------------------------------------------------------
# Optional dependency groups
# ---------------------------------------------------------------------------

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "black>=24.0",
    "Pillow>=10.0.0",
    "numpy>=1.24.0",
]
notebooks = [
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "ipywidgets>=8.0.0",
]
# Runtime ML dependencies (Hugging Face ecosystem + image/data utilities).
# Does NOT include torch/torchvision — add the `cuda` extra to pull those in,
# then optionally replace them with CUDA-enabled wheels (see `cuda` extra below).
# Usage:  uv sync --extra dev --extra ml
ml = [
    "diffusers>=0.27.0",
    "transformers>=4.38.0",
    "huggingface_hub>=0.21.0",
    "accelerate>=0.27.0",
    "peft>=0.9.0",
    "datasets>=2.17.0",
    "opencv-python>=4.9.0",
    "imageio>=2.34.0",
    "scipy>=1.12.0",
    "tqdm>=4.66.0",
    "pyyaml>=6.0.1",
    "omegaconf>=2.3.0",
    "einops>=0.7.0",
]
# GPU / CUDA build of PyTorch.
# Usage:  uv sync --extra cuda
# Note: PyPI torch wheels may already bundle CUDA libraries on Linux (pulling in
# nvidia-*/cuda-* deps).  They are not guaranteed to be a small CPU-only install.
# To force a true CPU-only build or a specific CUDA version, override with:
#   uv pip install torch torchvision --index-url https://download.pytorch.org/whl/cpu
#   uv pip install torch torchvision --index-url https://download.pytorch.org/whl/cu128
cuda = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
]

# ---------------------------------------------------------------------------
# Build backend (required by PEP 517; uv uses this)
# ---------------------------------------------------------------------------

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"

# ---------------------------------------------------------------------------
# Ruff (linter / formatter)
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # line length handled by formatter

# ---------------------------------------------------------------------------
# Black (formatter)
# ---------------------------------------------------------------------------

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
